--- a/android/app/src/main/assets/capacitor.config.json
+++ b/android/app/src/main/assets/capacitor.config.json
@@ -1,12 +1,20 @@
 {
   "appId": "io.ionic.starter",
-  "appName": "myApp",
+  "appName": "lists",
   "bundledWebRuntime": false,
   "npmClient": "npm",
   "webDir": "www",
   "plugins": {
     "SplashScreen": {
       "launchShowDuration": 0
+    },
+    "GoogleAuth":{
+      "scopes": [
+        "profile",
+        "email"
+      ],
+      "serverClientId": "291532548979-lc9m8tgmdv232qshgvr2ehktmu8lh6hm.apps.googleusercontent.com.apps.googleusercontent.com",
+      "forceCodeForRefreshToken": true
     }
   },
   "cordova": {}
