--- a/capacitor.config.json
+++ b/capacitor.config.json
@@ -1,5 +1,5 @@
 {
-  "appId": "io.cappasaulle.lists",
+  "appId": "io.ionic.starter",
   "appName": "lists",
   "bundledWebRuntime": false,
   "npmClient": "npm",
@@ -7,6 +7,14 @@
   "plugins": {
     "SplashScreen": {
       "launchShowDuration": 0
+    },
+    "GoogleAuth":{
+      "scopes": [
+        "profile",
+        "email"
+      ],
+      "serverClientId": "291532548979-lc9m8tgmdv232qshgvr2ehktmu8lh6hm.apps.googleusercontent.com",
+      "forceCodeForRefreshToken": true
     }
   },
   "cordova": {}
