--- a/android/app/src/main/assets/capacitor.config.json
+++ b/android/app/src/main/assets/capacitor.config.json
@@ -13,7 +13,7 @@
         "profile",
         "email"
       ],
-      "serverClientId": "291532548979-lc9m8tgmdv232qshgvr2ehktmu8lh6hm.apps.googleusercontent.com.apps.googleusercontent.com",
+      "serverClientId": "291532548979-lc9m8tgmdv232qshgvr2ehktmu8lh6hm.apps.googleusercontent.com",
       "forceCodeForRefreshToken": true
     }
   },
